# Template-project

./: .clangd  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
include/: hello.h
src/: hello.c
